force-app/main/default/objects/SharePoint_Config__mdt/SharePoint_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for SharePoint integration. Stores site, drive, and folder IDs for the contracts folder to monitor.</description>
    <label>SharePoint Config</label>
    <pluralLabel>SharePoint Configs</pluralLabel>
</CustomObject>