force-app/main/default/objects/SharePoint_Config__mdt/fields/Contracts_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Folder_Id__c</fullName>
    <description>The SharePoint folder item ID to monitor for new contracts. Use 'root' to monitor the root of the drive.</description>
    <label>Contracts Folder ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>