force-app/main/default/objects/SharePoint_Config__mdt/fields/Drive_Id__c.field-meta.xml
<CustomField>
    <fullName>Drive_Id__c</fullName>
    <description>The SharePoint document library (drive) ID from Microsoft Graph API</description>
    <label>Drive ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>