force-app/main/default/objects/SharePoint_Config__mdt/fields/Scan_Subfolders__c.field-meta.xml
<CustomField>
    <fullName>Scan_Subfolders__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether to recursively scan subfolders within the contracts folder.</description>
    <label>Scan Subfolders</label>
    <type>Checkbox</type>
</CustomField>