force-app/main/default/objects/SharePoint_Config__mdt/fields/Site_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Display_Name__c</fullName>
    <description>Human-readable name for this SharePoint site, for display purposes only.</description>
    <label>Site Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>