force-app/main/default/objects/SharePoint_Config__mdt/fields/Site_Id__c.field-meta.xml
<CustomField>
    <fullName>Site_Id__c</fullName>
    <description>The SharePoint site ID from Microsoft Graph API (e.g. tenant.sharepoint.com,xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx,xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx)</description>
    <label>Site ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>